--- a/src/global.css
+++ b/src/global.css
@@ -96,7 +96,7 @@
     }
 
     h1, h2, h3, h4, h5, h6 {
-        @apply font-playfair text-center italic;
+        @apply font-cormorant text-center italic;
     }
 
     h1, h2 {
@@ -112,7 +112,7 @@
     }
 
     p {
-        @apply font-playfair
+        @apply font-cormorant
     }
 
     body {
@@ -138,7 +138,7 @@
     }
 
     .highlight {
-        @apply text-yellow-300 font-black font-playfair
+        @apply text-yellow-300 font-black font-cormorant
     }
 
     .presentation-wrapper {
@@ -174,11 +174,11 @@
     }
 
     .project-wrapper {
-        @apply display-flex
+        @apply display-flex h-full
     }
 
     .project-list-wrapper {
-        @apply display-flex flex-col
+        @apply display-flex flex-col mobileS:overflow-x-hidden items-center tablet:overflow-x-visible h-full
     }
 
     .project-image {
